--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netlify-plugin-skip",
+  "name": "netlify-plugin-nx-skip-build",
   "version": "0.0.1",
   "description": "Netlify Build plugin - A netlify plugin that skipping not affected apps in your nx workspace.",
   "main": "src/index.js",
@@ -23,7 +23,7 @@
     "test": "test"
   },
   "engines": {
-    "node": ">=12.18.0"
+    "node": ">=10.18.0"
   },
   "scripts": {
     "build": "netlify-build",
