--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netlify-plugin-nx-skip-build",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Netlify Build plugin - A netlify plugin that skipping not affected apps in your nx workspace.",
   "main": "src/index.js",
   "files": [
@@ -13,7 +13,8 @@
   ],
   "keywords": [
     "netlify-plugin",
-    "netlify"
+    "netlify",
+    "nx"
   ],
   "author": "fahd_allibdi <fa88hd@gmail.com>",
   "license": "MIT",
