--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netlify-plugin-nx-skip-build",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Netlify Build plugin - A netlify plugin that skipping not affected apps in your nx workspace.",
   "main": "src/index.js",
   "files": [
@@ -18,8 +18,12 @@
   ],
   "author": "fahd_allibdi <fa88hd@gmail.com>",
   "license": "MIT",
-  "repository": "//github.com/f22hd/netlify-plugin-skip-build",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/f22hd/netlify-plugin-nx-skip-build.git"
+  },
   "bugs": {
+    "email": "fa88hd.dev@gmail.com",
     "url": "https://github.com/f22hd/netlify-plugin-nx-skip-build/issues"
   },
   "directories": {
